<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_columnSpan="4"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        tools:text="123456789"
        android:background="@color/items_background_color"
        android:layout_marginTop="@dimen/top_margin"

        android:gravity="end"
        android:textColor="@color/result_text_color"

        >
    </TextView>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:paddingEnd="@dimen/padding_row"
        android:paddingStart="@dimen/padding_row"
        >
        <Button
            android:id="@+id/btnClear"
            android:text="@string/btn_clear"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
        </Button>

        <Button
            android:id="@+id/btnBack"
            android:text="@string/btn_back"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >

        </Button>

        <Button
            android:id="@+id/btnSubtract"
            android:text="@string/btn_subtract"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            >
        </Button>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"

        >
        <Button
            android:id="@+id/btn7"
            android:text="@string/btn7"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>

        <Button
            android:id="@+id/btn8"
            android:text="@string/btn8"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>

        <Button
            android:id="@+id/btn9"
            android:text="@string/btn9"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >

        </Button>

        <Button
            android:id="@+id/btnMultiply"
            android:text="@string/btn_multiply"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"

        >
        <Button
            android:id="@+id/btn4"
            android:text="@string/btn4"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>

        <Button
            android:id="@+id/btn5"
            android:text="@string/btn5"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>

        <Button
            android:id="@+id/btn6"
            android:text="@string/btn6"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >

        </Button>

        <Button
            android:id="@+id/btnDivide"
            android:text="@string/btn_divide"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"

        >
        <Button
            android:id="@+id/btn1"
            android:text="@string/btn1"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>

        <Button
            android:id="@+id/btn2"
            android:text="@string/btn2"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>

        <Button
            android:id="@+id/btn3"
            android:text="@string/btn3"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >

        </Button>

        <Button
            android:id="@+id/btnAdd"
            android:text="@string/btn_add"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            >
        </Button>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:paddingEnd="@dimen/padding_row"
        android:paddingStart="@dimen/padding_row"
        >
        <Button
            android:id="@+id/btn0"
            android:text="@string/btn0"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
        </Button>

        <Button
            android:id="@+id/btnDot"
            android:text="@string/btn_dot"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
        </Button>

        <Button
            android:id="@+id/btnEqual"
            android:text="@string/btn_equal"
            android:textColor="@color/result_text_color"
            android:backgroundTint="@color/items_background_color"
            android:textSize="@dimen/btns_text_size"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >

        </Button>

    </TableRow>




</TableLayout>